2006-04-28  Steve Frécinaux  <steve@istique.net>

	* gedit/gedit-plugins-engine.[ch]: add support for an 'Icon' field in
	the plugins description file. New function to access this icon field:
	gedit_plugin_engine_get_plugin_icon_name.
	
	* gedit/gedit-plugin-manager.c: show the above defined icon in the
	plugin about boxes and in the plugin list.
	
	* plugins/indent/indent.gedit-plugin.desktop.in:
	* plugins/pythonconsole/pythonconsole.gedit-plugin.desktop.in:
	* plugins/sort/sort.gedit-plugin.desktop.in:
	* plugins/spell/spell.gedit-plugin.desktop.in:
	
	Define custom icons.

2006-04-26  Benoît Dejean  <benoit@placenet.org>

	* gedit/gedit-languages-manager.c: (string_to_tag_style): Cleanup.
	Closes #172352.

2006-04-26  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #336954 – Does not work with arabic dictionary
	
	* plugins/spell/gedit-spell-checker.c: add Arabic and Arabic Egypt 
	to the list of known languages.
	Patch by Mohammed Sameer <Uniball@gmx.net>

2006-04-25  Steve Frécinaux  <steve@istique.net>

	* gedit/gedit-panel.c: Remove some unused non-working code.

=== gedit 2.15.1 ===

2006-04-24  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.15.1 released

2006-04-24  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #339597 - gedit Manual Page Bugs
	
	* data/gedit.1: fix the doubled occurences of the
	string 'gedit' in the manpage. Removed the section about piper since
	they are not supported anymore. Based on a patch by 
	Richard Laager <rlaager@users.sf.net>

2006-04-24  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/SnippetsLibrary.py:
	* plugins/snippets/snippets/SnippetsDialog.py:
	
	Fixed a bug where reverting a snippet results in the system snippet 
	disappearing. The fix involves setting the correct namespaced id when 
	the library of a snippet changes and putting the system snippet id in
	the loaded_ids list when reverted

2006-04-24  Steve Frécinaux  <steve@istique.net>
