@@ -49,7 +49,6 @@
 	  <child>
 	    <widget class="GtkButton" id="button1">
 	      <property name="visible">True</property>
-	      <property name="sensitive">True</property>
 	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
 	      <property name="label">gtk-help</property>
@@ -410,6 +409,7 @@
 			      <property name="invisible_char">*</property>
 			      <property name="activates_default">False</property>
 			      <signal name="focus_out_event" handler="on_entry_tab_trigger_focus_out" last_modification_time="Wed, 04 Jan 2006 14:07:29 GMT"/>
+			      <signal name="changed" handler="on_entry_tab_trigger_changed" last_modification_time="Fri, 28 Apr 2006 16:50:34 GMT"/>
 			    </widget>
 			    <packing>
 			      <property name="left_attach">1</property>
