@@ -1,3 +1,13 @@
+2006-05-01  Jesse van den Kieboom  <jesse@icecrew.nl>
+
+	* gedit/plugins/snippets/snippets/SnippetsDialog.py: 
+	* gedit/plugins/snippets/snippets/SnippetsLibrary.py:
+	* gedit/plugins/snippets/snippets/functions.py:
+	* gedit/plugins/snippets/snippets/snippets.glade:
+	
+	Added snippet validation (by tab trigger and accelerator). Added error 
+	message for invalid tab triggers
+
 2006-04-28  Steve Frécinaux  <steve@istique.net>
 
 	* gedit/gedit-plugins-engine.[ch]: add support for an 'Icon' field in
